# petcasts

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  config.local.example.yaml  config.yaml  docker-compose.yml  go.mod  go.sum  pyproject.toml
.claude/projects/-Users-kyle-dev-petcast/memory/: MEMORY.md  feedback_no_prs.md  feedback_verify_code.md
.github/workflows/: build.yml
cmd/petcast/: main.go
docs/: plan-v2.md
esphome/: petcast-frame.yaml
firmware/waveshare-photopainter/: petcast-frame.yaml  secrets.yaml.example
internal/auth/: auth.go  auth_test.go  google.go
internal/config/: config.go  config_test.go
internal/db/: db.go  db_test.go  provisioning.go  provisioning_test.go  users.go
internal/gemini/: client.go  client_test.go
internal/pipeline/: dither.go  dither_test.go  pipeline.go  pipeline_test.go  weather.go  weather_test.go
internal/server/: e2e_test.go  server.go  server_test.go
internal/storage/: local.go  local_test.go
internal/web/: web.go  web_test.go
pets/meta/: pets.yaml
pets/state/: history.json
src/petcast/: __main__.py  celebrations.py  cli.py  config.py  dither.py  generate.py  overlay.py  pipeline.py  scene.py  select.py  server.py  weather.py
tests/: test_celebrations.py  test_dither.py  test_generate.py
web/static/: style.css
web/static/firmware/: manifest.json
web/templates/: base.html  claim.html  dashboard.html  frames.html  groups.html  history.html  login.html  pets.html  settings.html  styles.html
